Refactor getter and assert methods for readability
Replaced the `get(0)` method with `getFirst()` in ChatGPT class, bringing more clarity to the return value. In DallETest, switched from `isEqualTo(1)` to `isOne()` assertion method for improved readability in test condition.